# NewsReX

./: .cursorignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  raw_data_stats.py  requirements.txt
agents/: .cursorignore  .gitignore
agents/personalized_narratives/: README.md  pyproject.toml
agents/personalized_narratives/src/: mind_iterator.py
agents/personalized_narratives/src/personalized_narratives/: batch_utils.py  crew.py  main.py
agents/personalized_narratives/src/personalized_narratives/config/: agents.yaml  tasks.yaml
agents/personalized_narratives/src/personalized_narratives/tools/: __init__.py  exa_search_tool.py
configs/: config.yaml
configs/dataset/: base.yaml  custom.yaml  japanese.yaml  mind.yaml  multilingual_example.yaml
configs/experiment/: crown_mind_small.yaml  lstur_jp.yaml  lstur_mind_small.yaml  naml_jp.yaml  naml_mind_large.yaml  naml_mind_small.yaml  nrms_jp.yaml  nrms_mind_small.yaml
configs/experiment_groups/: all_models_mind_small.yaml
configs/model/: base.yaml  crown.yaml  lstur.yaml  naml.yaml  nrms.yaml
configs/sampling/: base.yaml
scripts/: combine_news_datasets.py  combine_news_with_dates.py  generate_dataset_summary.py  infer_news_dates.py  run_all_processing.py  run_experiments.sh  run_experiments_jp.sh
src/: test.py  train.py  visualize.py
src/datasets/: __init__.py  base.py  base_news.py  custom.py  custom_dataset_utils.py  dataloader.py  japanese.py  knowledge_graph.py  mind.py  utils.py
src/models/: __init__.py  base.py  crown.py  layers.py  lstur.py  naml.py  nrms.py
src/tests/: crown.py  diagnose_glove.py  embeddings.py  glove.py  jax_gpu.py  lstur.py  naml.py  nrms.py  run_all_tests.py  tensorflow_gpu.py
src/utils/: README.md  __init__.py  analytics.py  cache_manager.py  cli.py  device.py  embeddings.py  engine.py  evaluation.py  io.py  jax_optimizer.py  logging.py  losses.py  metrics.py  model.py  orchestration.py  sampling.py  saving.py
(+36 files in other folders)
