[project]
name = "personalized_narratives"
version = "0.1.0"
description = "personalized_narratives using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
    "exa-py (>=1.13.1,<2.0.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)"
]

[project.scripts]
personalized_narratives = "personalized_narratives.main:run"
run_crew = "personalized_narratives.main:run"
train = "personalized_narratives.main:train"
replay = "personalized_narratives.main:replay"
test = "personalized_narratives.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
